--- a/html5-css3-1/css/style.css
+++ b/html5-css3-1/css/style.css
@@ -33,3 +33,11 @@ nav {
 	height: 192px;
 	background: #888;
 }
+
+section {
+	position: relative;
+	margin: auto;
+	width: 1000px;
+	height: 453px;
+	background: #aaa;
+}
