--- a/html5-css3-1/css/style.css
+++ b/html5-css3-1/css/style.css
@@ -177,8 +177,44 @@ aside#right {
 	top: 0;
 	width: 200px;
 	height: 453px;
-	background: #381F1E;
 }
+
+aside#right h1 {
+	width: 200px;
+	height: 50px;
+	line-height: 50px;
+	text-align: center;
+	background: #381F1E;
+	color: white;
+	margin: 0px 3px 5px;
+}
+
+aside#right input {
+	padding: 10px;
+	margin: 0px 3px 5px;
+	width: 176px;
+}
+
+aside#right input[type="text"] {
+	background: url(img/user.png);
+	background-repeat: no-repeat;
+	background-position: right;
+	background-size: contain;
+}
+
+aside#right input[type="password"] {
+	background: url(img/password.png);
+	background-repeat: no-repeat;
+	background-position: right;
+	background-size: contain;
+}
+
+aside#right input[type="submit"] {
+	width: 200px;
+	background: rgba(171, 134, 171, 0.5);
+	border: 0;
+}
+
 
 footer {
 	position: relative;
