--- a/html5-css3-1/css/style.css
+++ b/html5-css3-1/css/style.css
@@ -115,86 +115,58 @@ SECTION 3
 SECTION 4
 =============================================*/
 
-section {
-	position: relative;
-	margin: auto;
-	width: 1000px;
-	height: 453px;
-}
-
-aside#left {
-	position: absolute;
-	left: 0;
-	top: 0;
-	width: 200px;
-	height: 453px;
-}
-
-aside#left ul li {
+#section4 aside ul li {
 
 	background: #381F1E;
 	padding: 10px;
 	margin: 2px 10px;
 	list-style: square;
 	list-style-position: inside;
-	list-style-image: url(img/list.png);
+	list-style-image: url(../img/list.png);
 	color: #fff;
+
 }
 
-article {
-	position: absolute;
-	left: 200px;
-	top: 0;
-	width: 600px;
-	height: 453px;
-	background: #666;
-}
-
-article h1 {
+#section4 article h1 {
 	font-family: 'Kaushan Script', cursive;
 	font-size: 40px;
 	margin: 20px;
-	color: #fff;
 }
 
-article p img {
+#section4 article p img {
 	float: left;
 	margin-right: 20px;
 }
 
-article p {
+#section4 article p {
 	margin: 5px 20px;
 	font-size: 14px;
 	text-align: justify;
-	color: #fff;
 }
 
-aside#right {
-	position: absolute;
-	right: 0;
-	top: 0;
-	width: 200px;
-	height: 453px;
-}
-
-aside#right h1 {
-	width: 200px;
-	height: 50px;
+#section4 aside#right h1 {
 	line-height: 50px;
 	text-align: center;
 	background: #381F1E;
 	color: white;
-	margin: 0px 3px 10px;
+	margin-bottom: 5px;
 }
 
-aside#right input {
+#section4 aside#right input {
+	width: 100%;
 	padding: 10px;
-	margin: 0px 3px 5px;
-	width: 176px;
+	margin: 5px 0;
 }
 
-aside#right input[type="text"] {
-	background: url(img/user.png);
+#section4 aside#right input[type="text"] {
+	background: url(../img/user.png);
+	background-repeat: no-repeat;
+	background-position: right;
+	background-size: contain;
+}
+
+#section4 aside#right input[type="password"] {
+	background: url(../img/password.png);
 	background-repeat: no-repeat;
 	background-position: right;
 	background-size: contain;
@@ -207,11 +179,10 @@ aside#right input[type="password"] {
 	background-size: contain;
 }
 
-aside#right input[type="submit"] {
-	width: 200px;
-	background: rgba(171, 134, 171, 0.5);
+#section4 aside#right input[type="submit"] {
+	background:rgba(171, 134, 171, 0.5);
 	border: 0;
-}
+		}
 
 #chat {
 	position: fixed;
