Add media query to transform the page to responsive

--- a/html5-css3-1/css/style.css
+++ b/html5-css3-1/css/style.css
@@ -131,6 +131,12 @@ SECTION 4
 	font-family: 'Kaushan Script', cursive;
 	font-size: 40px;
 	margin: 20px;
+	color: #fff;
+}
+
+#section4 article {
+	background: #666;
+	margin: 2px 0;
 }
 
 #section4 article p img {
@@ -142,6 +148,7 @@ SECTION 4
 	margin: 5px 20px;
 	font-size: 14px;
 	text-align: justify;
+	color:#fff;
 }
 
 #section4 aside#right h1 {
