--- a/css3-designs/css/style.css
+++ b/css3-designs/css/style.css
@@ -1,3 +1,12 @@
+* {
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    list-style: none;
+    font-family: sans-serif;
+    box-sizing: border-box;
+    letter-spacing: 1px;
+}
 #top {
     background: yellow;
 }
