--- a/css3-designs/css/style.css
+++ b/css3-designs/css/style.css
@@ -7,6 +7,12 @@
     box-sizing: border-box;
     letter-spacing: 1px;
 }
+
+.container {
+    max-width: 1080px;
+    margin: auto;
+    width: 90%;
+}
 #top {
     background: yellow;
 }
@@ -18,6 +24,12 @@
     background-attachment: fixed;
     height: 100px;
     color: #fff;
+    margin-bottom: 10px;
+    padding: 10px;
+}
+
+#header h1 {
+    font-family: 'Kaushan Script', cursive;
 }
 
 .green {
@@ -27,5 +39,8 @@
 .blue {
     color: #381F1E;
     background: #fff ;
+    padding: 10px;
+    margin: 10px;
 }
+
 
