--- a/css3-designs/css/style.css
+++ b/css3-designs/css/style.css
@@ -75,3 +75,12 @@ th {
     width: 12%;
     border: 1px solid #ddd;
 }
+
+td {
+    padding: 5px;
+}
+
+#lowercol {
+    background-color: #000; 
+    color: #fff;"
+}
