--- a/css3-designs/css/style.css
+++ b/css3-designs/css/style.css
@@ -88,7 +88,7 @@ td {
 
 #lowercol {
     background-color: #000; 
-    color: #fff;"
+    color: #fff;
 }
 #uppercol h3 {
     font-family: 'Kaushan Script', cursive;
