CSS3 advanced designs

--- a/css3-designs/css/style.css
+++ b/css3-designs/css/style.css
@@ -93,3 +93,8 @@ td {
 #uppercol h3 {
     font-family: 'Kaushan Script', cursive;
 }
+
+footer {
+    margin-top: 10px;
+    text-align: center;
+}
