--- a/css3-webpage-layout/css/style.css
+++ b/css3-webpage-layout/css/style.css
@@ -2,12 +2,27 @@
     height: 100px;
     width: 100px;
     background-color: red;
+    float: left;
+    margin: 10px;
+    
 }
 
 .box2 {
     height: 100px;
     width: 100px;
     background-color: blue;
+    float: right;
+    margin: 10px;
+}
+
+.myImg{
+    float:left;
+    padding: 10px;
+    border: 5px solid #eee;
+    margin: 10px;
 }
 
 
+p {
+    text-align: justify;
+}
