--- a/css3-webpage-layout/css/style.css
+++ b/css3-webpage-layout/css/style.css
@@ -1,28 +1,27 @@
-.box1 {
-    height: 100px;
-    width: 100px;
-    background-color: red;
-    float: left;
-    margin: 10px;
-    
+.container{
+    position: relative;
+    margin: 0 auto;
+    width: 100%;
+    height: auto;
 }
 
-.box2 {
-    height: 100px;
-    width: 100px;
-    background-color: blue;
-    float: right;
+.thumbnail{
+    float: left;
+    padding: 10px;
+    border: 1px solid #eee;
     margin: 10px;
+    border-radius: 5px;
+    /*box-shadow: 5px 5px;*/
 }
 
 .myImg{
-    float:left;
-    padding: 10px;
-    border: 5px solid #eee;
-    margin: 10px;
+    max-width: 100%;
 }
-
 
 p {
     text-align: justify;
+}
+
+p::first-letter{
+    text-transform:capitalize;
 }
