--- a/css3-webpage-layout/css/style.css
+++ b/css3-webpage-layout/css/style.css
@@ -1,6 +1,7 @@
 .container{
+    max-width: 1080px;
     position: relative;
-    margin: 0 auto;
+    margin: auto;
     width: 100%;
     height: auto;
 }
