--- a/CSS-create-a-website/css/style.css
+++ b/CSS-create-a-website/css/style.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Bellefair&display=swap');
+
+body {
+    font-family: 'Bellefair', serif;
+}
+
+h1 {
+    font-size: 2em;
+}
+
 .container{
     max-width: 1080px;
     position: relative;
@@ -25,6 +35,7 @@ nav a{
     color: #fff;
     text-align: center;
     padding: 10px 0;
+    text-transform: uppercase;
     display: block;
 }
 
@@ -46,7 +57,7 @@ nav a:hover{
     width: 56%;
     float: left;
     height: 100%;
-    padding: 0 2%;
+    padding: 5px 2%;
 }
 
 #side-menu {
@@ -66,8 +77,7 @@ nav a:hover{
     list-style-type: none;
     display: block;
     width: 100%;
-    padding: 3px 0;
-    
+    padding: 7px 0;    
 }
 
 #side-menu a {
@@ -82,6 +92,9 @@ nav a:hover{
 .footer-container {
    
     background-color: #5fa359;
+    color: white;
+    text-align: center;
+    padding: 10px;
 }
 
 .clearfix {
