Setting up a two columns layout of a web page.

--- a/CSS-create-a-website/css/style.css
+++ b/CSS-create-a-website/css/style.css
@@ -108,6 +108,7 @@ p {
 p::first-letter{
     background-color: #000;
     color:white;
+    font-size: 3em;
 }
 p::selection {
     background-color: blueviolet;
