--- a/a-single-page-website/css/style.css
+++ b/a-single-page-website/css/style.css
@@ -3,6 +3,20 @@
 body {
     font-family: 'Bellefair', serif;
 }
+.container {
+    max-width: 1080px;
+    position: relative;
+    margin: auto;
+    width: 100%;
+    height: auto;
+    background-color: beige;
+    padding: 10px;
+}
+
+.section {
+    border: 1px solid #ddd;
+    min-height: 500px;
+}
 
 #nav ul{
     list-style: none;
@@ -27,4 +41,6 @@ body {
 #nav li a:hover{
     color: red;
 }
+
+
 
