--- a/a-single-page-website/css/style.css
+++ b/a-single-page-website/css/style.css
@@ -6,7 +6,7 @@ body {
 .container {
     max-width: 1080px;
     position: relative;
-    margin: auto;
+    margin: 0 auto;
     width: 100%;
     height: auto;
     background-color: beige;
@@ -42,5 +42,8 @@ body {
     color: red;
 }
 
+p {
+    text-align: justify;
+}
 
 
