--- a/a-single-page-website/css/style.css
+++ b/a-single-page-website/css/style.css
@@ -13,9 +13,21 @@ body {
     padding: 10px;
 }
 
+#master-header {
+    width: 100%;
+    background-color: #381F1E;
+    height: 55px;
+    position: fixed;
+    z-index: 1;
+}
+
 .section {
     border: 1px solid #ddd;
     min-height: 500px;
+}
+
+nav {
+    margin-top: 10px;
 }
 
 #nav ul{
@@ -28,7 +40,7 @@ body {
     float: left;
     padding: 0 10px;
     margin: 2px;
-    background-color: #000;
+    background-color: #5fa359;
 }
 
 #nav li a{
