--- a/a-single-page-website/css/style.css
+++ b/a-single-page-website/css/style.css
@@ -2,6 +2,9 @@
 
 body {
     font-family: 'Bellefair', serif;
+    margin: 0;
+    padding: 0;
+    width: 100%
 }
 
 #master-header {
@@ -37,6 +40,10 @@ body {
 #section1{
     background-image: url(../img/image1.jpg);
     background-size: cover;             
+}
+
+#section1 .wrap{
+    margin-top: 90px;
 }
 
 #nav {
@@ -78,16 +85,21 @@ body {
     padding: 20px;
     margin: 40px auto;
     color: #381F1E;
+    width: 70%;
 }
 
 #footer {
     background-color: #333;
     color: #fff;
+    padding: 20px;
 }
 
 .col-1 {
+    width: 66%;
+    display: inline-block;
 
 }
 .col-2 {
-
+    width: 33%;
+    display: inline-block;
 }
