--- a/a-single-page-website/css/style.css
+++ b/a-single-page-website/css/style.css
@@ -107,3 +107,9 @@ body {
     width: 33%;
     display: inline-block;
 }
+
+img {
+    border: 4px solid #fff;
+    margin: 5px;
+    float: left;
+}
