--- a/learn-CSS3-from-scratch/css/style.css
+++ b/learn-CSS3-from-scratch/css/style.css
@@ -1,21 +1,18 @@
 .bluebox{
     background: #3A5795;
     color: #fff;
-    height: auto;
+    height: 100px;
     width: auto;
-    padding: 16px;
-    border-style: dashed;
-    margin: 20px;
+    float: left;
 }
 
 .yellowbox{
     background: rgb(222,224,85);
-    height: auto;
+    height: 100px;
     width: auto;
     color: #381F1E;
-    padding: 10px 5px 7px 3em;
-    margin: 60px 30px 20px 30px;
-}
+    float: right;
+  }
 .greenbox{
     background: #319f37;
     height: 100px;
@@ -27,6 +24,7 @@
     border-radius: 80px;
     border-color: #28ccb6;
     margin: 5% 45%;
+    clear: both;
 }
 p{
     margin: 0;
