--- a/final-math-website/css/style.css
+++ b/final-math-website/css/style.css
@@ -1,8 +1,12 @@
 #container{
     width:1080px;
     border: 1px solid grey;
-    height: 200px;
+    height: auto;
     margin: 0 auto;
+}
+
+#header {
+    height: 100px;
 }
 h1 a {
     font-size: 50px;
@@ -10,6 +14,26 @@ h1 a {
     color:#861BBF;
     text-decoration: none;
 }
+
+#brand {
+    float:left;
+}
+
+#searchBox {
+    float: right;
+    background: linear-gradient(#E4F2B9, #B7E953);
+    width: 400px;
+    height: 50px;
+}
+
+.text{
+    float: left;
+}
+
+.submit{
+    float:right;
+}
+
 p{
     margin: 0;
     background: #8bbbbf;
