--- a/final-math-website/css/style.css
+++ b/final-math-website/css/style.css
@@ -7,6 +7,7 @@
 
 #header {
     height: 100px;
+    padding: 10px 0;
 }
 h1 a {
     font-size: 50px;
@@ -24,14 +25,25 @@ h1 a {
     background: linear-gradient(#E4F2B9, #B7E953);
     width: 400px;
     height: 50px;
+    padding: 20px 20px 0 20px;
+    margin-top: 20px;
 }
 
 .text{
     float: left;
+    width: 200px;
+    padding: 5px;
+    font-size: 15px;
+    color:#E36A0C;
 }
 
 .submit{
     float:right;
+    padding: 5px;
+    font-weight: bold;
+    color:white;
+    background: #A751D6;
+    font-size: 15px;
 }
 
 p{
