--- a/final-math-website/css/style.css
+++ b/final-math-website/css/style.css
@@ -74,6 +74,16 @@ ul {
     font-size: 17px;
     color: #5d12e7;
     line-height: 30px;
+    transition: font-size 1s linear;
+}
+
+#menu ul li a:hover, #menu ul li a.active {
+    font-size: 20px;
+    font-weight: bold;
+    color: #B314DB
+}
+#menu ul li:last-child{
+    border-right: none;
 }
 
 p{
