Building a Math's Tutorial website - section

--- a/final-math-website/css/style.css
+++ b/final-math-website/css/style.css
@@ -93,9 +93,17 @@ ul {
 #introduction {
     background: linear-gradient(#E5F2BB, #B7E952);
     padding: 30px;
+    margin: 16px 0;
 }
 
-p{
-    margin: 0;
-    /* background: #8bbbbf; */
+#introduction h3 {
+    font-size: 45px;
+    color: #316901;
+    font-weight: normal;
+}
+
+#introduction p{
+    font-size: 25px;
+    color: #628F19;
+    text-align: justify;
 }
