Building a Math's Tutorial website - footer

--- a/final-math-website/css/style.css
+++ b/final-math-website/css/style.css
@@ -36,6 +36,7 @@ h1 a {
     font-size: 15px;
     color:#E36A0C;
     background: white url(../img/search.png) right center no-repeat;
+    border: 1px solid #C8D03E;
 }
 
 .submit{
