--- a/AngularDev/Angular-Simplilearn/my-shiny-new-angular-app/src/app/core/header/header.component.html
+++ b/AngularDev/Angular-Simplilearn/my-shiny-new-angular-app/src/app/core/header/header.component.html
@@ -1,3 +1,6 @@
 <p>This is the template for header component!</p>
 <!--Property binding-->
 <p>{{ message }}</p>
+<p [innerText]="messageBound"></p>
+<button (click)="onClick()">Click me to run a function</button><br><br>
+<input (keyup)="onKeyUp($event)" type="text">
