Angular property and event data binding.

--- a/AngularDev/Angular-Simplilearn/my-shiny-new-angular-app/src/app/core/header/header.component.html
+++ b/AngularDev/Angular-Simplilearn/my-shiny-new-angular-app/src/app/core/header/header.component.html
@@ -2,5 +2,5 @@
 <!--Property binding-->
 <p>{{ message }}</p>
 <p [innerText]="messageBound"></p>
-<button (click)="onClick()">Click me to run a function</button><br><br>
+<button (click)="onClick()">Click me to run a function</button><br><br><br>
 <input (keyup)="onKeyUp($event)" type="text">
