Implementing Angular routing

--- a/AngularDev/Angular-Simplilearn/my-shiny-new-angular-app/src/app/app.component.html
+++ b/AngularDev/Angular-Simplilearn/my-shiny-new-angular-app/src/app/app.component.html
@@ -3,8 +3,13 @@
   <div class="styled">
     <div id="header">
       <h1>Angular starter page.</h1>
-      <!-- add the selector from the header component in core module -->
+      <!-- add the selector header component in the app component html -->
       <app-header></app-header>
+
+      <div class="conatiner-fluid">
+        <!-- add the selector note-list component in the app component html -->
+        <app-note-list></app-note-list>
+      </div>
 
       <!-- Footer -->
     </div>
