Implementing Angular routing

--- a/AngularDev/Angular-Simplilearn/my-shiny-new-angular-app/src/app/app.component.css
+++ b/AngularDev/Angular-Simplilearn/my-shiny-new-angular-app/src/app/app.component.css
@@ -11,12 +11,51 @@
 }
 
 #header {
-  height: auto;
+  height: 100px;
   padding: 10px 0;
 }
 
-.styled {
-  border: 4px dashed #333;
+h1 a {
+  font-size: 50px;
+  font-weight: 100;
+  color: #861BBF;
+  text-decoration: none;
+}
+
+#brand {
+  float: left;
+}
+
+#searchBox {
+  float: right;
+  background: linear-gradient(#E4F2B9, #B7E953);
+  width: 400px;
+  height: 50px;
+  padding: 20px 20px 0 20px;
+  margin-top: 20px;
+}
+
+.text {
+  float: left;
+  width: 200px;
+  padding: 5px;
+  font-size: 15px;
+  color: #E36A0C;
+  /*background: white url(../img/search.png) right center no-repeat;*/
+  border: 1px solid #C8D03E;
+}
+
+.submit {
+  float: right;
+  padding: 5px;
+  font-weight: bold;
+  color: white;
+  background: #A751D6;
+  font-size: 15px;
+}
+
+.clearfix {
+  clear: both;
 }
 
 h1 {
@@ -24,6 +63,65 @@ h1 {
   font-weight: 100;
   color: #861BBF;
   text-decoration: none;
+}
+
+#menu {
+  height: 70px;
+  background: linear-gradient(#F8F594, #D5D533);
+  padding: 7px 0;
+}
+
+ul {
+  list-style: none;
+}
+
+#menu ul li {
+  float: left;
+  padding: 0 30px;
+  height: 30px;
+  border-right: 1px solid #5d12e7;
+}
+
+#menu ul li a {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 17px;
+  color: #5d12e7;
+  line-height: 30px;
+  -webkit-transition: font-size 0.3s ease;
+  -o-transition: font-size 0.3s ease;
+  -moz-transition: font-size 0.3s ease;
+  -ms-transition: font-size 0.3s ease;
+  transition: font-size 0.3s ease;
+}
+
+#menu ul li a:hover,
+#menu ul li a.active {
+  font-size: 20px;
+  font-weight: bold;
+  color: #B314DB
+}
+
+#menu ul li:last-child {
+  border-right: none;
+}
+
+#introduction {
+  background: linear-gradient(#E5F2BB, #B7E952);
+  padding: 30px;
+  margin: 16px 0;
+}
+
+#introduction h3 {
+  font-size: 45px;
+  color: #316901;
+  font-weight: normal;
+}
+
+#introduction p {
+  font-size: 25px;
+  color: #628F19;
+  text-align: justify;
 }
 
 .footer {
@@ -34,3 +132,4 @@ h1 {
   background: linear-gradient(#E5F2BB, #B7E952);
   margin-top: 200px;
 }
+
