Implementing Angular routing

--- a/AngularDev/Angular-Simplilearn/my-shiny-new-angular-app/src/app/app.component.html
+++ b/AngularDev/Angular-Simplilearn/my-shiny-new-angular-app/src/app/app.component.html
@@ -2,18 +2,7 @@
 <div class="container">
 
     <!-- Starts header -->
-    <div id="header">
-        <div id="brand">
-          <h1><a href="#">Angular the Fun Way!</a></h1>
-        </div>
-        <div id="searchBox">
-          <form method="get">
-            <input type="text" class="text">
-            <input type="submit" value="Search a topic" class="submit">
-          </form>
-        </div>
-        <div class="clearfix"></div>
-    </div>
+      <app-header></app-header>
     <!-- Ends header -->
     <!--=====================================
         SECTION 1
