--- a/AngularDev/Angular-Simplilearn/my-shiny-new-angular-app/src/app/header/header.component.html
+++ b/AngularDev/Angular-Simplilearn/my-shiny-new-angular-app/src/app/header/header.component.html
@@ -12,3 +12,17 @@
   <div class="clearfix"></div>
 </div>
 <!-- Ends header -->
+<!--=====================================
+          SECTION 1
+======================================-->
+
+  <!-- Starts Navigation Bar-->
+  <div id="menu">
+    <ul>
+      <li><a href="#" class="active">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Blog</a></li>
+
+    </ul>
+  </div>
+  <!-- Ends Navigation Bar-->
