Implementing Angular routing

--- a/AngularDev/Angular-Simplilearn/my-shiny-new-angular-app/src/app/app.component.html
+++ b/AngularDev/Angular-Simplilearn/my-shiny-new-angular-app/src/app/app.component.html
@@ -11,8 +11,10 @@
     <!-- Starts section part -->
 
       <div id="introduction">
-        <!-- add the selector note-list component in the app component html -->
+        <!-- add the selector note-list component in the app component html.-->
         <app-note-list></app-note-list>
+        <!-- add the selector router outlet component in the app component html for navigation.-->
+        <router-outlet></router-outlet>
       </div>
 
       <!-- Starts Footer -->
@@ -33,5 +35,3 @@
 
 </div>
 
-
-<router-outlet></router-outlet>
