--- a/AngularDev/Angular-Simplilearn/my-shiny-new-angular-app/src/app/header/header.component.html
+++ b/AngularDev/Angular-Simplilearn/my-shiny-new-angular-app/src/app/header/header.component.html
@@ -19,9 +19,9 @@
   <!-- Starts Navigation Bar-->
   <div id="menu">
     <ul>
-      <li><a href="#" class="active">Home</a></li>
-      <li><a href="#">Blog</a></li>
-      <li><a href="#">About</a></li>
+      <li><a href="/home" class="active">Home</a></li>
+      <li><a href="/blog">Blog</a></li>
+      <li><a href="/about">About</a></li>
 
     </ul>
   </div>
