*ngFor Structural Directives

--- a/AngularDev/Angular-Simplilearn/my-shiny-new-angular-app/src/app/header/header.component.html
+++ b/AngularDev/Angular-Simplilearn/my-shiny-new-angular-app/src/app/header/header.component.html
@@ -21,6 +21,7 @@
     <ul>
       <li routerLinkActive="active"><a routerLink="/home" class="active">Home</a></li>
       <li><a routerLink="/blog">Blog</a></li>
+      <li><a routerLink="/str-dir">Angular Directives</a></li>
       <li><a routerLink="/about">About</a></li>
 
     </ul>
