--- a/AngularDev/Angular-Simplilearn/my-shiny-new-angular-app/src/app/components/built-in-str-dir/built-in-str-dir.component.html
+++ b/AngularDev/Angular-Simplilearn/my-shiny-new-angular-app/src/app/components/built-in-str-dir/built-in-str-dir.component.html
@@ -1,1 +1,6 @@
-<p>built-in-str-dir works!</p>
+<ul class="list-group">
+  <li class="list-group-item" *ngFor="let message of messages; let i = index;" >
+      Index: {{i}}, Message: {{message}}
+  </li>
+</ul>
+
